[SPARTA-1184] Initial settings refactor (#127)
* Initial settings refactor

* Added more options to JVM optimizations

* Code style refactor